[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiolocknalert"
version = "0.1.0"
description = "Async Python client for LocknAlert bridge onboarding"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Raine" }
]
dependencies = [
  "aiohttp>=3.9.0"
]

[project.urls]
Homepage = "https://github.com/LocknAlert-Pty-LTD/aiolocknalert"
Repository = "https://github.com/LocknAlert-Pty-LTD/aiolocknalert"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]